@@ -6,6 +6,28 @@ Version 1.0
 Request
 -------
 
+A remote method is invoked by sending a request to a remote service. The
+request is a single object serialized using JSON.
+
+It has three properties:
+
+* method - A String containing the name of the method to be invoked.
+
+* params - An Array of objects to pass as arguments to the method.
+
+* id - The request id. This can be of any type. It is used to match the
+  response with the request that it is replying to. Due to the nature of
+  callbacks in Twisted, this property is not needed nor used by txJSON-RPC.
+  In the version 1.0 spec, it is provided for the sake of compatibility.
+
+The following imported function is not public and not intended for regular use
+as part of the API. Its use here is for spec-compliance demonstration only::
+
+    >>> from txjsonrpc.jsonrpclib import _v1Request
+    >>> _v1Request("myfunc", ["arg1", "arg2", "arg3"], "anid")
+    '{"params": ["arg1", "arg2", "arg3"], "method": "myfunc", "id": "anid"}'
+
+
 Response
 --------
 
